docs/0.18/_sources/api/gammapy.modeling.models.GaussianTemporalModel.rst.txt
GaussianTemporalModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: GaussianTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GaussianTemporalModel.covariance
      ~GaussianTemporalModel.default_parameters
      ~GaussianTemporalModel.parameters
      ~GaussianTemporalModel.sigma
      ~GaussianTemporalModel.t_ref
      ~GaussianTemporalModel.tag
      ~GaussianTemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~GaussianTemporalModel.__call__
      ~GaussianTemporalModel.copy
      ~GaussianTemporalModel.create
      ~GaussianTemporalModel.evaluate
      ~GaussianTemporalModel.from_dict
      ~GaussianTemporalModel.from_parameters
      ~GaussianTemporalModel.integral
      ~GaussianTemporalModel.plot
      ~GaussianTemporalModel.time_sum
      ~GaussianTemporalModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: sigma
   .. autoattribute:: t_ref
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: plot
   .. automethod:: time_sum
   .. automethod:: to_dict
