docs/1.0.2/_sources/api/gammapy.modeling.models.GaussianTemporalModel.rst.txt
GaussianTemporalModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: GaussianTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GaussianTemporalModel.covariance
      ~GaussianTemporalModel.default_parameters
      ~GaussianTemporalModel.frozen
      ~GaussianTemporalModel.parameters
      ~GaussianTemporalModel.reference_time
      ~GaussianTemporalModel.sigma
      ~GaussianTemporalModel.t_ref
      ~GaussianTemporalModel.tag
      ~GaussianTemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~GaussianTemporalModel.__call__
      ~GaussianTemporalModel.copy
      ~GaussianTemporalModel.evaluate
      ~GaussianTemporalModel.freeze
      ~GaussianTemporalModel.from_dict
      ~GaussianTemporalModel.from_parameters
      ~GaussianTemporalModel.integral
      ~GaussianTemporalModel.plot
      ~GaussianTemporalModel.reassign
      ~GaussianTemporalModel.sample_time
      ~GaussianTemporalModel.time_sum
      ~GaussianTemporalModel.to_dict
      ~GaussianTemporalModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: parameters
   .. autoattribute:: reference_time
   .. autoattribute:: sigma
   .. autoattribute:: t_ref
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: plot
   .. automethod:: reassign
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
   .. automethod:: unfreeze
